<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/ViewLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="60dp"
        app:srcCompat="@drawable/logo" />


    <!--<TextView
        android:id="@+id/textViewUsu"
        style="@style/TextView"
        android:text="@string/Usu"

        />-->


    <!--    <TextView-->
    <!--        android:id="@+id/textViewPass"-->
    <!--        style="@style/TextView"-->
    <!--        android:text="@string/Pass" />-->

    <EditText
        android:id="@+id/editTextCorreo"
        style="@style/EditText"
        android:background="@drawable/style_edittex"
        android:baselineAligned="false"
        android:drawableStart="@drawable/email_circle"
        android:drawablePadding="10dp"
        android:hint="@string/correo_electronico"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        style="@style/EditText"
        android:background="@drawable/style_edittex"
        android:drawableStart="@drawable/pass_icon"
        android:drawablePadding="20dp"
        android:hint="@string/coontrasena"
        android:inputType="textPassword" />

    <android.widget.Button
        android:id="@+id/buttonIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/backgrup_button"
        android:fontFamily="@font/roboto"
        android:text="@string/iniciar_sesion"
        android:textStyle="bold"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="5dp"
            android:text="@string/SinCuenta"
            android:textSize="16dp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/texViewRegistrar"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:text="@string/Registra"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>